Devhub: Use fixed-width font to align commit links

--- a/src/devhub/style.css
+++ b/src/devhub/style.css
@@ -194,3 +194,7 @@ section#metrics {
         }
     }
 }
+
+a.seed-commit {
+    font-family: monospace;
+}
